# nlbaas2octavia-lb-replicator

./: README.md  lb_migrator.py  lb_replicator.py  requirements.txt  setup.cfg  setup.py
nlbaas2octavia_lb_migrator/: lb_migrator.py
nlbaas2octavia_lb_replicator/: cmd.py  manager.py  parser.py
nlbaas2octavia_lb_replicator/common/: os_clients.py  utils.py
nlbaas2octavia_lb_replicator/constants/: env_variables.py
