[metadata]
name = nlbaas2octavia_lb_replicator
author = Nir Magnezi
author_email = nir.magnezi@gmail.com
summary = OpenStack Cloud Load Balancer Backup, Restore and Replicate
version = 1.2.0
description-file = README.md
license = Apache License, Version 2.0
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    nlbaas2octavia_lb_replicator

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    lb-replicator=nlbaas2octavia_lb_replicator.cmd:main
